--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <h1 class='head1'>Welcome to Avatar Tamagotchi!</h1> <br>
+    <h2 class='head2'>Select which Avatar companion you will play as:</h2>
     <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="js/app.js"></script>
+    <script src="js/app.js">
+    </script>
 </head>
 <body>
-    
+    <button type="button" onclick="playAppa()" class="appaButton" style="font-size:30px;">Skybison</button>
+    <button type="button" onclick="playNaga()" class="nagaButton" style="font-size:30px;">Polarbear Dog</button> 
+    <img id="appaImage" type="image" src="images/appa.png">
+    <img id="nagaImage" type="image" src="images/naga.png">
+    <img id="egg" type="image">
 </body>
-</html>
